# tr69hostif

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Components_AudioOutput_TODO.md  LICENSE  Makefile.am  Makefile.in  NOTICE  README.md  STBService_API_libds_mapping.txt  STBService_API_list.txt  STBService_JIRA_list_gerrit.txt  STBService_SPDIF_Thunder_migration.txt  build_inside_container.sh  configure  configure.ac  cov_build.sh  dependent_rdk_pkg_installer.sh  extract_factory_defaults.py  ip-iface-monitor.service  metrics.md  partners_defaults.json  print_stbservice_tr181.sh  rdk_env.xml  run_l2.sh  run_ut.sh  thunder_migration_apis.txt  tr181_datamodel_parameters.csv  tr181_factory_defaults.csv  tr69hostif-thunder-migration.prompt.md  tr69hostif.service  tr69hostif_no_new_http_server.service  tracer.md  typemap.json  validate_csv.py
src/: Makefile.am  Makefile.in  background.c  backgroundrun.c  configure.ac
src/hostif/docs/: README.md
src/hostif/handlers/: Makefile.am  Makefile.in  tr69hostif_otlp_instrumentation.cpp
src/hostif/handlers/docs/: README.md
src/hostif/handlers/include/: hostIf_DHCPv4Client_ReqHandler.h  hostIf_DeviceClient_ReqHandler.h  hostIf_EthernetClient_ReqHandler.h  hostIf_IPClient_ReqHandler.h  hostIf_InterfaceStackClient_ReqHandler.h  hostIf_MoCAClient_ReqHandler.h  hostIf_NotificationHandler.h  hostIf_SNMPClient_ReqHandler.h  hostIf_StorageSrvc_ReqHandler.h  hostIf_TimeClient_ReqHandler.h  hostIf_WiFi_ReqHandler.h  hostIf_XREClient_ReqHandler.h  hostIf_XrdkCentralT2_ReqHandler.h  hostIf_dsClient_ReqHandler.h  hostIf_jsonReqHandler.h  hostIf_msgHandler.h  hostIf_rbus_Dml_Provider.h  hostIf_updateHandler.h  tr69hostif_otlp_instrumentation.h  x_rdk_req_handler.h
src/hostif/handlers/src/: hostIf_DHCPv4Client_ReqHandler.cpp  hostIf_DeviceClient_ReqHandler.cpp  hostIf_EthernetClient_ReqHandler.cpp  hostIf_IARM_ReqHandler.cpp  hostIf_IPClient_ReqHandler.cpp  hostIf_InterfaceStackClient_ReqHandler.cpp  hostIf_MoCAClient_ReqHandler.cpp  hostIf_NotificationHandler.cpp  hostIf_SNMPClient_ReqHandler.cpp  hostIf_StorageService_ReqHandler.cpp  hostIf_TimeClient_ReqHandler.cpp  hostIf_WiFi_ReqHandler.cpp  hostIf_XREClient_ReqHandler.cpp  hostIf_XrdkCentralT2_ReqHandler.cpp  hostIf_dsClient_ReqHandler.cpp  hostIf_jsonReqHandlerThread.cpp  hostIf_msgHandler.cpp  hostIf_rbus_Dml_Provider.cpp  hostIf_sysScriptHandler.cpp  hostIf_updateHandler.cpp  x_rdk_req_handler.cpp
src/hostif/httpserver/: Makefile.am  Makefile.in
src/hostif/httpserver/docs/: README.md
src/hostif/httpserver/include/: XrdkCentralComRFCVar.h  http_server.h  request_handler.h
src/hostif/httpserver/src/: XrdkCentralComRFCVar.cpp  http_server.cpp  request_handler.cpp
src/hostif/include/: IniFile.h  hostIf_main.h  hostIf_tr69ReqHandler.h  hostIf_utils.h
src/hostif/parodusClient/: Makefile.am  Makefile.in  parodus.path  parodus.service  parodus_bsp.path  parodus_v4.path  parodus_v6.path
src/hostif/parodusClient/conf/: webpa_cfg.json
src/hostif/parodusClient/docs/: README.md  parodus-module-analysis.md
src/hostif/parodusClient/gtest/: Makefile.am  dm_test.cpp
src/hostif/parodusClient/pal/: Makefile.am  Makefile.in  libpd.cpp  libpd.h  mock_webpa.cpp  mock_webpa_build.sh  webpa_adapter.cpp  webpa_adapter.h  webpa_attribute.cpp  webpa_attribute.h  webpa_notification.cpp  webpa_notification.h  webpa_parameter.cpp  webpa_parameter.h
src/hostif/parodusClient/startParodus/: Makefile.am  Makefile.in  startParodus.cpp  startParodus.h  startParodus_spport.cpp
src/hostif/parodusClient/waldb/: Makefile.am  Makefile.in  data-model-generic.xml  waldb.cpp  waldb.h
src/hostif/profiles/: Makefile.am  Makefile.in
src/hostif/profiles/DHCPv4/: Device_DHCPv4_Client.cpp  Device_DHCPv4_Client.h  Makefile.am  Makefile.in
src/hostif/profiles/Device/: Makefile.am  Makefile.in  x_rdk_profile.cpp  x_rdk_profile.h
src/hostif/profiles/DeviceInfo/: Device_DeviceInfo.cpp  Device_DeviceInfo.h  Device_DeviceInfo_ProcessStatus.cpp  Device_DeviceInfo_ProcessStatus.h  Device_DeviceInfo_ProcessStatus_Process.cpp  Device_DeviceInfo_ProcessStatus_Process.h  Device_DeviceInfo_Processor.cpp  Device_DeviceInfo_Processor.h  Makefile.am  Makefile.in  XrdkBlueTooth.cpp  XrdkBlueTooth.h  XrdkCentralComBSStore.cpp  XrdkCentralComBSStore.h  XrdkCentralComBSStoreJournal.cpp  XrdkCentralComBSStoreJournal.h  XrdkCentralComRFC.cpp  XrdkCentralComRFC.h  XrdkCentralComRFCStore.cpp  XrdkCentralComRFCStore.h
src/hostif/profiles/Ethernet/: Device_Ethernet_Interface.cpp  Device_Ethernet_Interface.h  Device_Ethernet_Interface_Stats.cpp  Device_Ethernet_Interface_Stats.h  Makefile.am  Makefile.in
src/hostif/snmpAdapter/: Makefile.am  Makefile.in  snmpAdapter.cpp  snmpAdapter.h
src/hostif/src/: IniFile.cpp  hostIf_main.cpp  hostIf_utils.cpp
src/hostif/webcfg/: webcfg_utils.cpp  webcfg_utils.h
src/hostif/webconfig_lite/: Makefile.am  webconfig_lite.cpp  webconfig_lite.h  webconfig_utils.cpp  webconfig_utils.h
src/integrationtest/conf/: bootstrap.ini  data-model-generic.xml  data-model.xml  mgrlist.conf  rfc.properties  rfcVariable.ini  tr181store.ini
src/integrationtest/patch/: STBService.patch  Yajl.patch
src/integrationtest/stubs/: host.hpp  mfrMgr.h  mfrTypes.h  mfr_wifi_api.h  mfr_wifi_types.h  rdk_debug.h  sysMgr.h
src/tr69BusAgent/: Makefile.am  TR69BusAgent.cpp
src/tr69BusAgent/include/: TR69BusAgent.h
src/unittest/stubs/: dm_stubs.cpp  dm_stubs.h  dsAVDTypes.h  dsAudioSettings.h  dsFPDTypes.h  dsHdmiInTypes.h  dsVideoDeviceSettings.h  dsVideoDeviceTypes.h  dsVideoPortSettings.h  dsVideoResolutionSettings.h  file_writer.cpp  file_writer.h  fwdnldstatus.txt  iarm_stubs.cpp  libIARM.h  libIBus.h  libIBusDaemon.h  libparodus.h  libparodus_log.h  mfr_temperature.h  paramMgr.c  paramMgr.h  partners_defaults_device.json  power_controller.h  powerctrl_stubs.cpp  pwrMgr.h  rdk_debug.h  remote_debugger.json  rfcapi.h  rfcdefaults.ini  safec_lib.h  secure_wrapper.c  secure_wrapper.h  telemetry_busmessage_sender.h  telemetry_msgsender_stub.c  tr181store.ini  wdmp-c.c  wdmp-c.h  wdmp_internal.c  wdmp_internal.h  (+1 more)
(+391 files in other folders)
